downgrade dependencies and make code compatible with mc 1.16 and sodium 0.1.0